syntax = "proto3";
package com.dxc.ptinsight.analytics;


option java_package = "com.dxc.ptinsight.proto.analytics";


message FlowDirection {
  int64 geocells_edge = 1;
  // Number of vehicles that traversed the edge
  int32 count = 2;
}
