syntax = "proto3";
package com.dxc.ptinsight.analytics;

import "ptinsight/common/proto/base.proto";


option java_package = "com.dxc.ptinsight.proto.analytics";


message VehicleDistributionResult {
  int64 geocell = 1;
  int32 count = 2;
}

message FinalStopDistributionResult {
  int64 geocell = 1;
  int32 count = 2;
}

message DelayDistributionResult {
  int64 geocell = 1;
  // In seconds
  int64 percentile50th = 2;
  int64 percentile90th = 3;
  int64 percentile99th = 4;
}

message FlowDirectionResult {
  int64 geocells_edge = 1;
  // Number of vehicles that traversed the edge
  int32 count = 2;
}

message EmergencyStopDetectionResult {
  float latitude = 1;
  float longitude = 2;
  float speed_diff = 3;
  float max_deceleration = 4;
  com.dxc.ptinsight.VehicleType vehicle_type = 5;
}
